--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <meta name="author" content="Abzal Orazbek" />
 
     <link href="assets/images/logowoLetters.png" rel="icon" />
-    <link
-      href="landing-assets/img/apple-touch-icon.png"
-      rel="apple-touch-icon"
-    />
 
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700"
@@ -71,7 +67,7 @@
                 <li>
                   <a class="nav-link scrollto" href="#services">Особенности</a>
                 </li>
-                <li><a class="nav-link scrollto" href="#">Блог</a></li>
+                <li><a class="nav-link scrollto" href="blog.html">Блог</a></li>
                 <li>
                   <a class="nav-link scrollto" href="#contact">Связаться</a>
                 </li>
@@ -95,8 +91,6 @@
           data-bs-ride="carousel"
           data-bs-interval="5000"
         >
-          <!-- <ol id="hero-carousel-indicators" class="carousel-indicators"></ol> -->
-
           <div class="carousel-inner" role="listbox">
             <div
               class="carousel-item active"
@@ -121,14 +115,6 @@
               </div>
             </div>
           </div>
-
-          <!-- <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-        </a>
-
-        <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-        </a> -->
         </div>
       </div>
     </section>
@@ -263,49 +249,6 @@
           <a class="cta-btn" href="main.php">Вход</a>
         </div>
       </section>
-      <!-- <section id="skills">
-      <div class="container" data-aos="fade-up">
-
-        <header class="section-header">
-          <h3>Our Skills</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
-        </header>
-
-        <div class="skills-content">
-
-          <div class="progress">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-              aria-valuemax="100">
-              <span class="skill">HTML <i class="val">100%</i></span>
-            </div>
-          </div>
-
-          <div class="progress">
-            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-              aria-valuemax="100">
-              <span class="skill">CSS <i class="val">90%</i></span>
-            </div>
-          </div>
-
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-              aria-valuemax="100">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-            </div>
-          </div>
-
-          <div class="progress">
-            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-              aria-valuemax="100">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section> -->
       <section id="facts">
         <div class="container" data-aos="fade-up">
           <header class="section-header">
@@ -354,10 +297,6 @@
               <p>Админов</p>
             </div>
           </div>
-
-          <!-- <div class="facts-img">
-          <img src="screenshots/localhost_index.html.png" alt="" class="img-fluid">
-        </div> -->
         </div>
       </section>
       <section id="portfolio" class="section-bg">
@@ -365,18 +304,6 @@
           <header class="section-header">
             <h3 class="section-title">Скриншоты</h3>
           </header>
-
-          <!-- <div class="row" data-aos="fade-up" data-aos-delay="100">
-      <div class=" col-lg-12">
-          <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-card">Card</li>
-            <li data-filter=".filter-web">Web</li>
-          </ul>
-        </div>
-      </div> -->
-
           <div
             class="row portfolio-container"
             data-aos="fade-up"
@@ -771,7 +698,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6 footer-contact">
-              <h4>Contact Us</h4>
+              <h4>Связаться</h4>
               <p>
                 <br />
                 Astana, 020000<br />
@@ -806,14 +733,6 @@
           </div>
         </div>
       </div>
-      <!-- Copyright container -->
-      <!-- <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        </div>
-    </div> -->
     </footer>
 
     <a
