--- a/blog.html
+++ b/blog.html
@@ -229,7 +229,7 @@
                 <ul class="justify-content-center">
                   <li><a href="#">1</a></li>
                   <li class="active"><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
+                  <li><a href="#">3</a></li>`
                 </ul>
               </div>
             </div>
