--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@
           <div class="carousel-inner" role="listbox">
             <div
               class="carousel-item active"
-              style="
-                background-image: url(landing-assets/img/hero-carousel/1.jpg);
-              "
+              style="background-image: url(landing-assets/img/hero.jpg)"
             >
               <div class="carousel-container">
                 <div class="container">
@@ -532,28 +530,60 @@
           <div class="clients-slider swiper">
             <div class="swiper-wrapper align-items-center">
               <div class="swiper-slide">
-                <img src="" class="img-fluid" alt="Школа 1" />
+                <img
+                  src="landing-assets/img/clients/nis.png"
+                  class="img-fluid"
+                  alt="NIS"
+                />
               </div>
               <div class="swiper-slide">
-                <img src="" class="img-fluid" alt="Школа 2" />
+                <img
+                  src="landing-assets/img/clients/nis.png"
+                  class="img-fluid"
+                  alt="NIS"
+                />
               </div>
               <div class="swiper-slide">
-                <img src="" class="img-fluid" alt="Школа 3" />
+                <img
+                  src="landing-assets/img/clients/nis.png"
+                  class="img-fluid"
+                  alt="NIS"
+                />
               </div>
               <div class="swiper-slide">
-                <img src="" class="img-fluid" alt="Школа 4" />
+                <img
+                  src="landing-assets/img/clients/nis.png"
+                  class="img-fluid"
+                  alt="NIS"
+                />
               </div>
               <div class="swiper-slide">
-                <img src="" class="img-fluid" alt="Школа 5" />
+                <img
+                  src="landing-assets/img/clients/nis.png"
+                  class="img-fluid"
+                  alt="NIS"
+                />
               </div>
               <div class="swiper-slide">
-                <img src="" class="img-fluid" alt="Школа 6" />
+                <img
+                  src="landing-assets/img/clients/nis.png"
+                  class="img-fluid"
+                  alt="NIS"
+                />
               </div>
               <div class="swiper-slide">
-                <img src="" class="img-fluid" alt="Школа 7" />
+                <img
+                  src="landing-assets/img/clients/nis.png"
+                  class="img-fluid"
+                  alt="NIS"
+                />
               </div>
               <div class="swiper-slide">
-                <img src="" class="img-fluid" alt="Школа 8" />
+                <img
+                  src="landing-assets/img/clients/nis.png"
+                  class="img-fluid"
+                  alt="NIS"
+                />
               </div>
             </div>
             <div class="swiper-pagination"></div>
